// Vitest Snapshot v1

exports[`render pie-chart widget 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-1"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        myPieChart
      </h6>
      <div
        class="makeStyles-subscribers-2"
      />
    </div>
    <svg
      height="300"
      style="max-width: 100%; height: auto; height: intrinsic;"
      viewBox="-150,-150,300,300"
      width="300"
    >
      <g
        stroke="white"
        stroke-linejoin="round"
        stroke-width="1"
      >
        <path
          d="M9.184850993605149e-15,-150A150,150,0,0,1,142.65847744427302,-46.35254915624211L0,0Z"
          fill="rgb(209, 60, 75)"
        >
          <title>
            a
10
          </title>
        </path>
        <path
          d="M142.65847744427302,-46.35254915624211A150,150,0,0,1,9.184850993605149e-15,150L0,0Z"
          fill="rgb(254, 206, 126)"
        >
          <title>
            b
15
          </title>
        </path>
        <path
          d="M9.184850993605149e-15,150A150,150,0,0,1,-88.16778784387095,121.35254915624212L0,0Z"
          fill="rgb(209, 236, 158)"
        >
          <title>
            c
5
          </title>
        </path>
        <path
          d="M-88.16778784387095,121.35254915624212A150,150,0,0,1,-2.7554552980815446e-14,-150L0,0Z"
          fill="rgb(66, 136, 181)"
        >
          <title>
            d
20
          </title>
        </path>
      </g>
      <g
        font-family="sans-serif"
        font-size="14"
        font-style="normal"
        font-weight="normal"
        text-anchor="middle"
        text-decoration="none"
      >
        <text
          transform="translate(70.53423027509677,-97.0820393249937)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            a
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            10
          </tspan>
        </text>
        <text
          transform="translate(97.0820393249937,70.53423027509677)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            b
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            15
          </tspan>
        </text>
        <text
          transform="translate(-37.08203932499368,114.12678195541844)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            c
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            5
          </tspan>
        </text>
        <text
          transform="translate(-114.12678195541844,-37.08203932499367)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            d
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            20
          </tspan>
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`render pie-chart widget with empty style 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-7"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        myPieChart
      </h6>
      <div
        class="makeStyles-subscribers-8"
      />
    </div>
    <svg
      height="300"
      style="max-width: 100%; height: auto; height: intrinsic;"
      viewBox="-150,-150,300,300"
      width="300"
    >
      <g
        stroke=""
        stroke-linejoin="round"
        stroke-width="1"
      >
        <path
          d="M9.184850993605149e-15,-150A150,150,0,0,1,142.65847744427302,-46.35254915624211L0,0Z"
          fill="rgb(209, 60, 75)"
        >
          <title>
            a
10
          </title>
        </path>
        <path
          d="M142.65847744427302,-46.35254915624211A150,150,0,0,1,9.184850993605149e-15,150L0,0Z"
          fill="rgb(254, 206, 126)"
        >
          <title>
            b
15
          </title>
        </path>
        <path
          d="M9.184850993605149e-15,150A150,150,0,0,1,-88.16778784387095,121.35254915624212L0,0Z"
          fill="rgb(209, 236, 158)"
        >
          <title>
            c
5
          </title>
        </path>
        <path
          d="M-88.16778784387095,121.35254915624212A150,150,0,0,1,-2.7554552980815446e-14,-150L0,0Z"
          fill="rgb(66, 136, 181)"
        >
          <title>
            d
20
          </title>
        </path>
      </g>
      <g
        font-family="sans-serif"
        font-size="14"
        font-style="normal"
        font-weight="normal"
        text-anchor="middle"
        text-decoration="none"
      >
        <text
          transform="translate(70.53423027509677,-97.0820393249937)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            a
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            10
          </tspan>
        </text>
        <text
          transform="translate(97.0820393249937,70.53423027509677)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            b
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            15
          </tspan>
        </text>
        <text
          transform="translate(-37.08203932499368,114.12678195541844)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            c
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            5
          </tspan>
        </text>
        <text
          transform="translate(-114.12678195541844,-37.08203932499367)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            d
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            20
          </tspan>
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`render pie-chart widget with style 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        myPieChart
      </h6>
      <div
        class="makeStyles-subscribers-5"
      />
    </div>
    <svg
      height="300"
      style="max-width: 100%; height: auto; height: intrinsic;"
      viewBox="-150,-150,300,300"
      width="300"
    >
      <g
        stroke="Aquamarine"
        stroke-linejoin="round"
        stroke-width="2"
      >
        <path
          d="M9.184850993605149e-15,-150A150,150,0,0,1,142.65847744427302,-46.35254915624211L0,0Z"
          fill="CadetBlue"
        >
          <title>
            a
10
          </title>
        </path>
        <path
          d="M142.65847744427302,-46.35254915624211A150,150,0,0,1,9.184850993605149e-15,150L0,0Z"
          fill="CornflowerBlue"
        >
          <title>
            b
15
          </title>
        </path>
        <path
          d="M9.184850993605149e-15,150A150,150,0,0,1,-88.16778784387095,121.35254915624212L0,0Z"
          fill="Lavender"
        >
          <title>
            c
5
          </title>
        </path>
        <path
          d="M-88.16778784387095,121.35254915624212A150,150,0,0,1,-2.7554552980815446e-14,-150L0,0Z"
          fill="LightSteelBlue"
        >
          <title>
            d
20
          </title>
        </path>
      </g>
      <g
        font-family="sans-serif"
        font-size="15"
        font-style="italic"
        font-weight="bold"
        text-anchor="middle"
        text-decoration="line-through underline"
      >
        <text
          transform="translate(70.53423027509677,-97.0820393249937)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            a
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            10
          </tspan>
        </text>
        <text
          transform="translate(97.0820393249937,70.53423027509677)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            b
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            15
          </tspan>
        </text>
        <text
          transform="translate(-37.08203932499368,114.12678195541844)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            c
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            5
          </tspan>
        </text>
        <text
          transform="translate(-114.12678195541844,-37.08203932499367)"
        >
          <tspan
            font-weight="bold"
            x="0"
            y="0em"
          >
            d
          </tspan>
          <tspan
            x="0"
            y="1.1em"
          >
            20
          </tspan>
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`render the bar-chart widget 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        myBarChart
      </h6>
      <div
        class="makeStyles-subscribers-11"
      />
    </div>
    <svg
      height="250"
      style="max-width: 100%; max-height: 250; height: auto; height: intrinsic;"
      viewBox="0,0,500,250"
      width="500"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font-size:14; font-style: normal; text-decoration: none; font-weight: normal"
        text-anchor="end"
        transform="translate(40,0)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,220.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,170.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,70.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,20.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            20
          </text>
        </g>
        <text
          fill="currentColor"
          text-anchor="start"
          x="-40"
          y="10"
        >
          values
        </text>
      </g>
      <g
        fill="steelblue"
      >
        <rect
          height="100"
          width="100.97560975609757"
          x="51.21951219512195"
          y="120"
        >
          <title>
            a
10.0
          </title>
        </rect>
        <rect
          height="150"
          width="100.97560975609757"
          x="163.41463414634148"
          y="70"
        >
          <title>
            b
15.0
          </title>
        </rect>
        <rect
          height="50"
          width="100.97560975609757"
          x="275.609756097561"
          y="170"
        >
          <title>
            c
5.0
          </title>
        </rect>
        <rect
          height="200"
          width="100.97560975609757"
          x="387.80487804878055"
          y="20"
        >
          <title>
            d
20.0
          </title>
        </rect>
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font-size:14; font-style: normal; text-decoration: none; font-weight: normal"
        text-anchor="middle"
        transform="translate(0,220)"
      >
        <path
          class="domain"
          d="M40.5,0.5H500.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(101.70731707317074,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(213.90243902439028,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(326.0975609756098,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(438.29268292682934,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            d
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`render the bar-chart widget with empty style 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-16"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        myBarChart
      </h6>
      <div
        class="makeStyles-subscribers-17"
      />
    </div>
    <svg
      height="250"
      style="max-width: 100%; max-height: 250; height: auto; height: intrinsic;"
      viewBox="0,0,500,250"
      width="500"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font-size:12; font-style: normal; text-decoration: none; font-weight: normal"
        text-anchor="end"
        transform="translate(40,0)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,220.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,170.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,70.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,20.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            20
          </text>
        </g>
        <text
          fill="currentColor"
          text-anchor="start"
          x="-40"
          y="10"
        >
          values
        </text>
      </g>
      <g
        fill="steelblue"
      >
        <rect
          height="100"
          width="100.97560975609757"
          x="51.21951219512195"
          y="120"
        >
          <title>
            a
10.0
          </title>
        </rect>
        <rect
          height="150"
          width="100.97560975609757"
          x="163.41463414634148"
          y="70"
        >
          <title>
            b
15.0
          </title>
        </rect>
        <rect
          height="50"
          width="100.97560975609757"
          x="275.609756097561"
          y="170"
        >
          <title>
            c
5.0
          </title>
        </rect>
        <rect
          height="200"
          width="100.97560975609757"
          x="387.80487804878055"
          y="20"
        >
          <title>
            d
20.0
          </title>
        </rect>
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font-size:12; font-style: normal; text-decoration: none; font-weight: normal"
        text-anchor="middle"
        transform="translate(0,220)"
      >
        <path
          class="domain"
          d="M40.5,0.5H500.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(101.70731707317074,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(213.90243902439028,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(326.0975609756098,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(438.29268292682934,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            d
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`render the bar-chart widget with style 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-13"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        myBarChart
      </h6>
      <div
        class="makeStyles-subscribers-14"
      />
    </div>
    <svg
      height="250"
      style="max-width: 100%; max-height: 250; height: auto; height: intrinsic;"
      viewBox="0,0,500,250"
      width="500"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font-size:15; font-style: italic; text-decoration: line-through underline; font-weight: bold"
        text-anchor="end"
        transform="translate(40,0)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,220.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,170.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,70.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,20.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <line
            stroke="currentColor"
            stroke-opacity="0.1"
            x2="460"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            20
          </text>
        </g>
        <text
          fill="currentColor"
          text-anchor="start"
          x="-40"
          y="10"
        >
          values
        </text>
      </g>
      <g
        fill="Aquamarine"
      >
        <rect
          height="100"
          width="100.97560975609757"
          x="51.21951219512195"
          y="120"
        >
          <title>
            a
10.0
          </title>
        </rect>
        <rect
          height="150"
          width="100.97560975609757"
          x="163.41463414634148"
          y="70"
        >
          <title>
            b
15.0
          </title>
        </rect>
        <rect
          height="50"
          width="100.97560975609757"
          x="275.609756097561"
          y="170"
        >
          <title>
            c
5.0
          </title>
        </rect>
        <rect
          height="200"
          width="100.97560975609757"
          x="387.80487804878055"
          y="20"
        >
          <title>
            d
20.0
          </title>
        </rect>
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font-size:15; font-style: italic; text-decoration: line-through underline; font-weight: bold"
        text-anchor="middle"
        transform="translate(0,220)"
      >
        <path
          class="domain"
          d="M40.5,0.5H500.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(101.70731707317074,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(213.90243902439028,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(326.0975609756098,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(438.29268292682934,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            d
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
